istioctl/pkg/writer/envoy/configdump/testdata/clusterdump.json
[{
    "name": "outbound|15004||istio-policy.istio-system.svc.cluster.local",
    "type": "EDS",
    "edsClusterConfig": {
        "edsConfig": {
            "ads": {

            }
        },
        "serviceName": "outbound|15004||istio-policy.istio-system.svc.cluster.local"
    },
    "connectTimeout": "1.000s",
    "maxRequestsPerConnection": 10000,
    "circuitBreakers": {
        "thresholds": [
            {
                "maxRequests": 10000
            }
        ]
    },
    "http2ProtocolOptions": {
        "maxConcurrentStreams": 1073741824
    }
},{
    "name": "xds-grpc",
    "type": "STRICT_DNS",
    "connectTimeout": "10.000s",
    "hosts": [
        {
            "socketAddress": {
                "address": "istio-pilot.istio-system",
                "portValue": 15010
            }
        }
    ],
    "circuitBreakers": {
        "thresholds": [
            {
                "maxConnections": 100000,
                "maxPendingRequests": 100000,
                "maxRequests": 100000
            },
            {
                "priority": "HIGH",
                "maxConnections": 100000,
                "maxPendingRequests": 100000,
                "maxRequests": 100000
            }
        ]
    },
    "http2ProtocolOptions": {

    }
}]
