istioctl/pkg/writer/envoy/configdump/testdata/clusterdumpfiltered.txt
{
    "name": "outbound|15004||istio-policy.istio-system.svc.cluster.local",
    "type": "EDS",
    "edsClusterConfig": {
        "edsConfig": {
            "ads": {

            }
        },
        "serviceName": "outbound|15004||istio-policy.istio-system.svc.cluster.local"
    },
    "connectTimeout": "1.000s",
    "maxRequestsPerConnection": 10000,
    "circuitBreakers": {
        "thresholds": [
            {
                "maxRequests": 10000
            }
        ]
    },
    "http2ProtocolOptions": {
        "maxConcurrentStreams": 1073741824
    }
}
