istioctl/pkg/writer/envoy/configdump/testdata/clustersummary.txt
SERVICE FQDN                                    PORT      SUBSET     DIRECTION     TYPE
istio-policy.istio-system.svc.cluster.local     15004     -          outbound      &{EDS}
xds-grpc                                        -         -          -             &{STRICT_DNS}
