istioctl/pkg/writer/envoy/configdump/testdata/clustersummaryfiltered.txt
SERVICE FQDN                                    PORT      SUBSET     DIRECTION     TYPE
istio-policy.istio-system.svc.cluster.local     15004     -          outbound      &{EDS}
