istioctl/pkg/writer/envoy/configdump/testdata/listenerdump.txt
{
    "name": "172.21.134.116_443",
    "address": {
        "socketAddress": {
            "address": "172.21.134.116",
            "portValue": 443
        }
    },
    "filterChains": [
        {
            "filters": [
                {
                    "name": "mixer",
                    "config": {
                        "disable_check_calls": true,
                        "mixer_attributes": {
                            "attributes": {
                                "context.reporter.local": {
                                    "bool_value": false
                                },
                                "context.reporter.uid": {
                                    "string_value": "kubernetes://productpage-v1-5fcc7488f8-54g7q.default"
                                },
                                "destination.service": {
                                    "string_value": "unknown"
                                },
                                "destination.service.host": {
                                    "string_value": "unknown"
                                },
                                "destination.service.name": {
                                    "string_value": "unknown"
                                },
                                "destination.service.uid": {
                                    "string_value": "istio:///services/unknown"
                                },
                                "source.uid": {
                                    "string_value": "kubernetes://productpage-v1-5fcc7488f8-54g7q.default"
                                }
                            }
                        },
                        "transport": {
                            "attributes_for_mixer_proxy": {
                                "attributes": {
                                    "source.uid": {
                                        "string_value": "kubernetes://productpage-v1-5fcc7488f8-54g7q.default"
                                    }
                                }
                            },
                            "check_cluster": "outbound|9091||istio-policy.istio-system.svc.cluster.local",
                            "report_cluster": "outbound|9091||istio-telemetry.istio-system.svc.cluster.local"
                        }
                    }
                },
                {
                    "name": "envoy.tcp_proxy",
                    "config": {
                        "deprecated_v1": true,
                        "value": {
                            "route_config": {
                                "routes": [
                                    {
                                        "cluster": "outbound|443||istio-galley.istio-system.svc.cluster.local",
                                        "destination_ip_list": [
                                            "172.21.134.116/32"
                                        ]
                                    }
                                ]
                            },
                            "stat_prefix": "outbound|tcp|443"
                        }
                    }
                }
            ]
        }
    ],
    "deprecatedV1": {
        "bindToPort": false
    }
}
{
    "name": "0.0.0.0_8080",
    "address": {
        "socketAddress": {
            "address": "0.0.0.0",
            "portValue": 8080
        }
    },
    "filterChains": [
        {
            "filters": [
                {
                    "name": "envoy.http_connection_manager",
                    "config": {
                        "access_log": [
                            {
                                "config": {
                                    "path": "/dev/stdout"
                                },
                                "name": "envoy.file_access_log"
                            }
                        ],
                        "generate_request_id": true,
                        "http_filters": [
                            {
                                "config": {
                                    "default_destination_service": "details.default.svc.cluster.local",
                                    "forward_attributes": {
                                        "attributes": {
                                            "source.ip": {
                                                "bytes_value": "AAAAAAAAAAAAAP//rB5N8w=="
                                            },
                                            "source.labels": {
                                                "string_map_value": {
                                                    "entries": {
                                                        "app": "details",
                                                        "pod-template-hash": "57643725",
                                                        "version": "v1"
                                                    }
                                                }
                                            },
                                            "source.uid": {
                                                "string_value": "kubernetes://details-v1-9cb87c69-t2fdz.default"
                                            }
                                        }
                                    },
                                    "mixer_attributes": {
                                        "attributes": {}
                                    },
                                    "service_configs": {
                                        "details.default.svc.cluster.local": {
                                            "disable_check_calls": true,
                                            "disable_report_calls": true,
                                            "mixer_attributes": {
                                                "attributes": {
                                                    "destination.labels": {
                                                        "string_map_value": {
                                                            "entries": {
                                                                "app": "details",
                                                                "pod-template-hash": "57643725",
                                                                "version": "v1"
                                                            }
                                                        }
                                                    },
                                                    "destination.service": {
                                                        "string_value": "details.default.svc.cluster.local"
                                                    }
                                                }
                                            }
                                        }
                                    },
                                    "transport": {
                                        "check_cluster": "outbound|9091||istio-policy.istio-system.svc.cluster.local",
                                        "report_cluster": "outbound|9091||istio-telemetry.istio-system.svc.cluster.local"
                                    }
                                },
                                "name": "mixer"
                            },
                            {
                                "name": "envoy.cors"
                            },
                            {
                                "name": "envoy.fault"
                            },
                            {
                                "name": "envoy.router"
                            }
                        ],
                        "route_config": {
                            "name": "8080",
                            "validate_clusters": false,
                            "virtual_hosts": [
                                {
                                    "domains": [
                                        "istio-pilot.istio-system.svc.cluster.local",
                                        "istio-pilot.istio-system.svc.cluster.local:8080",
                                        "istio-pilot.istio-system",
                                        "istio-pilot.istio-system:8080",
                                        "istio-pilot.istio-system.svc.cluster",
                                        "istio-pilot.istio-system.svc.cluster:8080",
                                        "istio-pilot.istio-system.svc",
                                        "istio-pilot.istio-system.svc:8080",
                                        "172.21.245.9",
                                        "172.21.245.9:8080"
                                    ],
                                    "name": "istio-pilot.istio-system.svc.cluster.local:8080",
                                    "routes": [
                                        {
                                            "decorator": {
                                                "operation": "default-route"
                                            },
                                            "match": {
                                                "prefix": "/"
                                            },
                                            "route": {
                                                "cluster": "outbound|8080||istio-pilot.istio-system.svc.cluster.local"
                                            }
                                        }
                                    ]
                                }
                            ]
                        },
                        "stat_prefix": "http",
                        "tracing": {
                            "operation_name": "EGRESS"
                        },
                        "use_remote_address": false
                    }
                }
            ]
        }
    ],
    "deprecatedV1": {
        "bindToPort": false
    }
}
