istioctl/pkg/writer/envoy/configdump/testdata/listenerdumpfiltered.txt
{
    "name": "172.21.134.116_443",
    "address": {
        "socketAddress": {
            "address": "172.21.134.116",
            "portValue": 443
        }
    },
    "filterChains": [
        {
            "filters": [
                {
                    "name": "mixer",
                    "config": {
                        "disable_check_calls": true,
                        "mixer_attributes": {
                            "attributes": {
                                "context.reporter.local": {
                                    "bool_value": false
                                },
                                "context.reporter.uid": {
                                    "string_value": "kubernetes://productpage-v1-5fcc7488f8-54g7q.default"
                                },
                                "destination.service": {
                                    "string_value": "unknown"
                                },
                                "destination.service.host": {
                                    "string_value": "unknown"
                                },
                                "destination.service.name": {
                                    "string_value": "unknown"
                                },
                                "destination.service.uid": {
                                    "string_value": "istio:///services/unknown"
                                },
                                "source.uid": {
                                    "string_value": "kubernetes://productpage-v1-5fcc7488f8-54g7q.default"
                                }
                            }
                        },
                        "transport": {
                            "attributes_for_mixer_proxy": {
                                "attributes": {
                                    "source.uid": {
                                        "string_value": "kubernetes://productpage-v1-5fcc7488f8-54g7q.default"
                                    }
                                }
                            },
                            "check_cluster": "outbound|9091||istio-policy.istio-system.svc.cluster.local",
                            "report_cluster": "outbound|9091||istio-telemetry.istio-system.svc.cluster.local"
                        }
                    }
                },
                {
                    "name": "envoy.tcp_proxy",
                    "config": {
                        "deprecated_v1": true,
                        "value": {
                            "route_config": {
                                "routes": [
                                    {
                                        "cluster": "outbound|443||istio-galley.istio-system.svc.cluster.local",
                                        "destination_ip_list": [
                                            "172.21.134.116/32"
                                        ]
                                    }
                                ]
                            },
                            "stat_prefix": "outbound|tcp|443"
                        }
                    }
                }
            ]
        }
    ],
    "deprecatedV1": {
        "bindToPort": false
    }
}
