istioctl/pkg/writer/envoy/configdump/testdata/listenersummary.txt
ADDRESS            PORT     TYPE
172.21.134.116     443      TCP
0.0.0.0            8080     HTTP
0.0.0.0            8081     HTTP
0.0.0.0            8082     HTTP+TCP
