istioctl/pkg/writer/envoy/configdump/testdata/routedump.txt
{
    "name": "15004",
    "virtualHosts": [
        {
            "name": "istio-policy.istio-system.svc.cluster.local:15004",
            "domains": [
                "istio-policy.istio-system.svc.cluster.local",
                "istio-policy.istio-system.svc.cluster.local:15004",
                "istio-policy.istio-system",
                "istio-policy.istio-system:15004",
                "istio-policy.istio-system.svc.cluster",
                "istio-policy.istio-system.svc.cluster:15004",
                "istio-policy.istio-system.svc",
                "istio-policy.istio-system.svc:15004",
                "172.21.193.112",
                "172.21.193.112:15004"
            ],
            "routes": [
                {
                    "match": {
                        "prefix": "/"
                    },
                    "route": {
                        "cluster": "outbound|15004||istio-policy.istio-system.svc.cluster.local",
                        "timeout": "0.000s"
                    },
                    "decorator": {
                        "operation": "istio-policy.istio-system.svc.cluster.local:15004/*"
                    }
                }
            ]
        },
        {
            "name": "istio-telemetry.istio-system.svc.cluster.local:15004",
            "domains": [
                "istio-telemetry.istio-system.svc.cluster.local",
                "istio-telemetry.istio-system.svc.cluster.local:15004",
                "istio-telemetry.istio-system",
                "istio-telemetry.istio-system:15004",
                "istio-telemetry.istio-system.svc.cluster",
                "istio-telemetry.istio-system.svc.cluster:15004",
                "istio-telemetry.istio-system.svc",
                "istio-telemetry.istio-system.svc:15004",
                "172.21.41.196",
                "172.21.41.196:15004"
            ],
            "routes": [
                {
                    "match": {
                        "prefix": "/"
                    },
                    "route": {
                        "cluster": "outbound|15004||istio-telemetry.istio-system.svc.cluster.local",
                        "timeout": "0.000s"
                    },
                    "decorator": {
                        "operation": "istio-telemetry.istio-system.svc.cluster.local:15004/*"
                    }
                }
            ]
        }
    ],
    "validateClusters": false
}
{
    "name": "inbound|9080||productpage.default.svc.cluster.local",
    "virtualHosts": [
        {
            "name": "inbound|http|9080",
            "domains": [
                "*"
            ],
            "routes": [
                {
                    "match": {
                        "prefix": "/"
                    },
                    "route": {
                        "cluster": "inbound|9080||productpage.default.svc.cluster.local",
                        "timeout": "0.000s",
                        "useWebsocket": true
                    },
                    "decorator": {
                        "operation": "productpage.default.svc.cluster.local:9080/*"
                    },
                    "perFilterConfig": {
                        "mixer": {
                            "mixer_attributes": {
                                "attributes": {
                                    "destination.service": {
                                        "string_value": "productpage.default.svc.cluster.local"
                                    },
                                    "destination.service.host": {
                                        "string_value": "productpage.default.svc.cluster.local"
                                    },
                                    "destination.service.name": {
                                        "string_value": "productpage"
                                    },
                                    "destination.service.namespace": {
                                        "string_value": "default"
                                    },
                                    "destination.service.uid": {
                                        "string_value": "istio://default/services/productpage"
                                    }
                                }
                            }
                        }
                    }
                }
            ]
        }
    ],
    "validateClusters": false
}
