istioctl/pkg/writer/envoy/configdump/testdata/routedumpfiltered.json
[
    {
        "name": "15004",
        "virtualHosts": [
            {
                "name": "istio-policy.istio-system.svc.cluster.local:15004",
                "domains": [
                    "istio-policy.istio-system.svc.cluster.local",
                    "istio-policy.istio-system.svc.cluster.local:15004",
                    "istio-policy.istio-system",
                    "istio-policy.istio-system:15004",
                    "istio-policy.istio-system.svc.cluster",
                    "istio-policy.istio-system.svc.cluster:15004",
                    "istio-policy.istio-system.svc",
                    "istio-policy.istio-system.svc:15004",
                    "172.21.193.112",
                    "172.21.193.112:15004"
                ],
                "routes": [
                    {
                        "match": {
                            "prefix": "/"
                        },
                        "route": {
                            "cluster": "outbound|15004||istio-policy.istio-system.svc.cluster.local",
                            "timeout": "0.000s"
                        },
                        "decorator": {
                            "operation": "istio-policy.istio-system.svc.cluster.local:15004/*"
                        }
                    }
                ]
            },
            {
                "name": "istio-telemetry.istio-system.svc.cluster.local:15004",
                "domains": [
                    "istio-telemetry.istio-system.svc.cluster.local",
                    "istio-telemetry.istio-system.svc.cluster.local:15004",
                    "istio-telemetry.istio-system",
                    "istio-telemetry.istio-system:15004",
                    "istio-telemetry.istio-system.svc.cluster",
                    "istio-telemetry.istio-system.svc.cluster:15004",
                    "istio-telemetry.istio-system.svc",
                    "istio-telemetry.istio-system.svc:15004",
                    "172.21.41.196",
                    "172.21.41.196:15004"
                ],
                "routes": [
                    {
                        "match": {
                            "prefix": "/"
                        },
                        "route": {
                            "cluster": "outbound|15004||istio-telemetry.istio-system.svc.cluster.local",
                            "timeout": "0.000s"
                        },
                        "decorator": {
                            "operation": "istio-telemetry.istio-system.svc.cluster.local:15004/*"
                        }
                    }
                ]
            }
        ],
        "validateClusters": false
    }
]
