istioctl/pkg/writer/envoy/configdump/testdata/routesummaryfiltered.txt
NOTE: This output only contains routes loaded via RDS.
NAME      VIRTUAL HOSTS
15004     2
